Sigil v0.3.0 ADD_DATE
    - added a workaround for broken epubs created by other epub-producing software which caused
    a crash on certain searches with the Find dialog (issue #548)
    - fixed a problem with chapter splits being placed in the wrong reading order if a file was
    previously deleted from the Book Browser (issue #497)

Sigil v0.2.4 2010.08.12.
    - fixed a problem with updating image paths for images with the same filename but coming from
    different parent directories (issue #501)
    - added a new "Merge With Previous" context menu action for XHTML files in the Book Browser
    (issue #265)
    - changed Tidy to handle the common typing mistake of ending entities with a ':' instead
    of a ';' (issue #535)
    - fixed a bug where double-clicking a file in the Book Browser for a file that was already 
    opened in a tab switched that tab back to Book View; the tab now retains whatever View
    it was in previously
    - newly opened tabs now default to the View of the current tab (issue #468)
    - re-engineered the locations where Sigil stores its work files; the system-provided temp
    folder is now used; this should alleviate some permissions issues on certain machines,
    especially Macs (issue #404)
    - Sigil now prevents the renaming of files in the Book Browser to filesystem invalid names
    (issue #493)
    - changed the keyboard shortcut that opens the Replace dialog from Cmd+H to Cmd+Shift+F
    on Macs only; Cmd+H is used by Mac OS X for window hiding (issue #477)
    - fixed an issue with Sigil using XHTML 1.0 for OPS doctypes, instead of XHTML 1.1
    (issue #503)
    - several files can now be marked as having the Text semantic type (issue #522)
    - fixed an issue with Direction: All in book wide searching skipping last XHTML file 
    (issue #520)
    - fixed an issue with the declared XML encoding not being picked up if it was wrapped
    in single quotes instead of the more standard double quotes